--- a/Seance07/seance.ipynb
+++ b/Seance07/seance.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "scenic-contract",
+   "id": "seeing-collect",
    "metadata": {},
    "source": [
     "# Retour sur les graphes et les parcours"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "mediterranean-alert",
+   "id": "neither-burns",
    "metadata": {},
    "source": [
     "**REMARQUE** on a vu qu'on n'est pas obligé d'avoir le graphe entier en mémoire pour travailler dessus!"
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "single-effect",
+   "id": "nuclear-bruce",
    "metadata": {},
    "source": [
     "<img src=\"./graphe_non_oriente.svg\"/>"
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "chinese-amazon",
+   "id": "civilian-address",
    "metadata": {},
    "source": [
     "## Exercice\n",
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "careful-large",
+   "id": "surrounded-lucas",
    "metadata": {},
    "source": [
     "**REMARQUE** on constate que la seul fonctionnalité d'un graphe qu'on utilise pour `dfs` et `bfs` est la possibilité d'itérer sur les voisins d'un sommet."
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "frequent-nigeria",
+   "id": "understanding-connection",
    "metadata": {},
    "source": [
     "**REMARQUE** on a en fait trois façons d'implémenter un graphe\n",
@@ -103,7 +103,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "exclusive-freeware",
+   "id": "included-amendment",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -113,7 +113,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "tired-chancellor",
+   "id": "upset-waste",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -126,7 +126,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "fancy-lincoln",
+   "id": "single-intro",
    "metadata": {},
    "outputs": [
     {
@@ -147,7 +147,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "collective-relay",
+   "id": "western-benjamin",
    "metadata": {},
    "outputs": [
     {
@@ -176,7 +176,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "sharp-charge",
+   "id": "efficient-blanket",
    "metadata": {},
    "outputs": [
     {
@@ -205,7 +205,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "curious-ranch",
+   "id": "controlled-acrylic",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -229,7 +229,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "after-gentleman",
+   "id": "expired-reading",
    "metadata": {},
    "outputs": [
     {
@@ -250,7 +250,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "center-honey",
+   "id": "colonial-campbell",
    "metadata": {},
    "outputs": [
     {
@@ -279,7 +279,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "fitted-beaver",
+   "id": "affiliated-intelligence",
    "metadata": {},
    "outputs": [
     {
@@ -308,7 +308,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "tough-fossil",
+   "id": "reduced-identity",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -332,7 +332,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "opposite-ridge",
+   "id": "democratic-practitioner",
    "metadata": {},
    "outputs": [
     {
@@ -361,7 +361,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "ranking-sauce",
+   "id": "tropical-relevance",
    "metadata": {},
    "outputs": [
     {
@@ -389,7 +389,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "hazardous-prefix",
+   "id": "southwest-judge",
    "metadata": {},
    "source": [
     "**REMARQUE** le parcours par `bfs` produit les sommets par ordre de distance au sommet de départ.\n",
@@ -399,7 +399,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fifty-tolerance",
+   "id": "embedded-category",
    "metadata": {},
    "source": [
     "## Exercice\n",
@@ -411,7 +411,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "certain-british",
+   "id": "oriented-engineer",
    "metadata": {},
    "source": [
     "# Introduction problématique"
@@ -419,7 +419,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "numerical-mainstream",
+   "id": "dental-standing",
    "metadata": {},
    "source": [
     "La recherche de chemin par `bfs` produit celui qui a le moins d'arrête."
@@ -427,7 +427,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "convenient-change",
+   "id": "detailed-visibility",
    "metadata": {},
    "source": [
     "En fait on peut avoir une autre notion de distance dans les graphes et donc de chemin le plus court\n",
@@ -436,12 +436,14 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "respiratory-tenant",
+   "cell_type": "markdown",
+   "id": "antique-chemical",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## Exercice\n",
+    "\n",
+    "- Réfléchissez à la structure de données pour ce type de graphe et à un algorithme permettant de trouver le chemin le plus court."
+   ]
   }
  ],
  "metadata": {
