--- a/Seance09/seance.ipynb
+++ b/Seance09/seance.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "demanding-lexington",
+   "id": "optical-puzzle",
    "metadata": {},
    "source": [
     "# Exercice\n",
@@ -13,7 +13,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "modern-coast",
+   "id": "domestic-bahamas",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,8 +22,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "domestic-canon",
+   "execution_count": 2,
+   "id": "printable-drink",
    "metadata": {},
    "outputs": [
     {
@@ -127,7 +127,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "valid-maximum",
+   "id": "hydraulic-fashion",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -152,7 +152,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "loose-message",
+   "id": "crazy-dakota",
    "metadata": {},
    "outputs": [
     {
@@ -173,7 +173,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "interested-reminder",
+   "id": "lonely-surface",
    "metadata": {},
    "outputs": [
     {
@@ -194,7 +194,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "legislative-wesley",
+   "id": "municipal-helicopter",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -232,7 +232,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "matched-marathon",
+   "id": "appointed-establishment",
    "metadata": {},
    "outputs": [
     {
@@ -253,7 +253,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "several-register",
+   "id": "alike-miller",
    "metadata": {},
    "outputs": [
     {
@@ -273,7 +273,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "square-gauge",
+   "id": "measured-morocco",
    "metadata": {},
    "source": [
     "# Exercice\n",
@@ -290,7 +290,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "warming-riverside",
+   "id": "imported-teens",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -300,7 +300,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "prompt-diving",
+   "id": "associate-alpha",
    "metadata": {},
    "outputs": [
     {
@@ -344,8 +344,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "id": "regulation-skirt",
+   "execution_count": 11,
+   "id": "indonesian-scanner",
    "metadata": {},
    "outputs": [
     {
@@ -354,7 +354,7 @@
        "Table(graphe=GrapheP(voisinage={'A': {'B': 1, 'E': 7}, 'B': {'A': 1, 'C': 2, 'D': 4}, 'E': {'A': 7, 'G': 2, 'I': 4}, 'C': {'B': 2, 'D': 1, 'F': 1, 'G': 5}, 'D': {'B': 4, 'C': 1, 'F': 2, 'H': 1}, 'F': {'C': 1, 'D': 2, 'H': 1}, 'G': {'C': 5, 'E': 2, 'H': 2, 'I': 1}, 'H': {'D': 1, 'F': 1, 'G': 2}, 'I': {'E': 4, 'G': 1}}), depart='A')"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -366,8 +366,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "id": "electrical-pitch",
+   "execution_count": 12,
+   "id": "animated-electricity",
    "metadata": {},
    "outputs": [
     {
@@ -393,8 +393,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "id": "violent-penguin",
+   "execution_count": 13,
+   "id": "annual-diary",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -403,8 +403,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "id": "lucky-costs",
+   "execution_count": 14,
+   "id": "separate-white",
    "metadata": {},
    "outputs": [
     {
@@ -430,8 +430,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "id": "noble-hindu",
+   "execution_count": 15,
+   "id": "alike-reaction",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -440,8 +440,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "id": "stainless-tissue",
+   "execution_count": 16,
+   "id": "unavailable-music",
    "metadata": {},
    "outputs": [
     {
@@ -450,7 +450,7 @@
        "Table(graphe=GrapheP(voisinage={'Paris': {'Lille': 1, 'Strasbourg': 2, 'Lyon': 1, 'Clermont': 4, 'Tours': 1, 'Renne': 1}, 'Lille': {'Paris': 1, 'Strasbourg': 3}, 'Strasbourg': {'Paris': 2, 'Lille': 3, 'Lyon': 2}, 'Lyon': {'Paris': 1, 'Strasbourg': 2, 'Grenoble': 1, 'Marseille': 2, 'Clermont': 2}, 'Clermont': {'Paris': 4, 'Lyon': 2, 'Marseille': 4, 'Montpellier': 4, 'Toulouse': 4, 'Tours': 3}, 'Tours': {'Paris': 1, 'Bordeaux': 3, 'Nantes': 1, 'Brest': 2, 'Rennes': 1, 'Clermont': 3}, 'Renne': {'Paris': 1}, 'Grenoble': {'Lyon': 1, 'Marseille': 3}, 'Marseille': {'Lyon': 2, 'Grenoble': 3, 'Montpellier': 1, 'Clermont': 4}, 'Montpellier': {'Marseille': 1, 'Clermont': 4, 'Toulouse': 2}, 'Toulouse': {'Montpellier': 2, 'Clermont': 4, 'Bordeaux': 2}, 'Bordeaux': {'Toulouse': 2, 'Tours': 3, 'Nantes': 3}, 'Nantes': {'Bordeaux': 3, 'Tours': 1, 'Brest': 2}, 'Brest': {'Nantes': 2, 'Rennes': 1, 'Tours': 2}, 'Rennes': {'Brest': 1, 'Tours': 1}}), depart='Paris')"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -461,8 +461,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "id": "everyday-soldier",
+   "execution_count": 17,
+   "id": "neural-oxide",
    "metadata": {},
    "outputs": [
     {
@@ -494,8 +494,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "id": "senior-staff",
+   "execution_count": 18,
+   "id": "appropriate-concept",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -504,8 +504,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "id": "stopped-overall",
+   "execution_count": 19,
+   "id": "twelve-announcement",
    "metadata": {},
    "outputs": [
     {
@@ -571,21 +571,53 @@
   },
   {
    "cell_type": "markdown",
-   "id": "suburban-southeast",
+   "id": "chemical-black",
    "metadata": {},
    "source": [
     "# Exercice\n",
     "\n",
-    "Rajouter à `Table` une méthode `calcule_chemin` prenant en argument un sommet `arrivee` et renvoyant le chemin le plus court entre `depart` et ce `arrivee`. 15min -> 11h40"
+    "Rajouter à `Table` une méthode `calcule_chemin` prenant en argument un sommet `arrivee` et renvoyant le chemin le plus court entre `depart` et `arrivee`. 15min -> 11h40"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "casual-cement",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "deque(['A', 'B', 'C', 'D', 'H', 'G', 'I'])"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "table_exemple.calcule_chemin(arrivee=\"I\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "surprising-latest",
+   "id": "catholic-particle",
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "welsh-dover",
+   "metadata": {},
+   "source": [
+    "# Exercice\n",
+    "\n",
+    "- Complétez la documentation et les tests pour `calcule_chemin`\n",
+    "- Trait"
+   ]
   }
  ],
  "metadata": {
