--- a/Seance09/seance.ipynb
+++ b/Seance09/seance.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "optical-puzzle",
+   "id": "english-roller",
    "metadata": {},
    "source": [
     "# Exercice\n",
@@ -13,7 +13,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "domestic-bahamas",
+   "id": "illegal-insulation",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "printable-drink",
+   "id": "sudden-sugar",
    "metadata": {},
    "outputs": [
     {
@@ -127,7 +127,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "hydraulic-fashion",
+   "id": "individual-brisbane",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -152,7 +152,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "crazy-dakota",
+   "id": "protective-pharmaceutical",
    "metadata": {},
    "outputs": [
     {
@@ -173,7 +173,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "lonely-surface",
+   "id": "biological-pledge",
    "metadata": {},
    "outputs": [
     {
@@ -194,7 +194,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "municipal-helicopter",
+   "id": "retained-haiti",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -232,7 +232,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "appointed-establishment",
+   "id": "separated-attention",
    "metadata": {},
    "outputs": [
     {
@@ -253,7 +253,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "alike-miller",
+   "id": "insured-frederick",
    "metadata": {},
    "outputs": [
     {
@@ -273,7 +273,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "measured-morocco",
+   "id": "fabulous-positive",
    "metadata": {},
    "source": [
     "# Exercice\n",
@@ -290,7 +290,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "imported-teens",
+   "id": "conscious-rebound",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -300,7 +300,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "associate-alpha",
+   "id": "rental-visiting",
    "metadata": {},
    "outputs": [
     {
@@ -345,7 +345,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "indonesian-scanner",
+   "id": "wireless-looking",
    "metadata": {},
    "outputs": [
     {
@@ -367,7 +367,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "animated-electricity",
+   "id": "revised-maine",
    "metadata": {},
    "outputs": [
     {
@@ -394,7 +394,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "annual-diary",
+   "id": "sharing-deficit",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -404,7 +404,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "separate-white",
+   "id": "graduate-trauma",
    "metadata": {},
    "outputs": [
     {
@@ -431,7 +431,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "alike-reaction",
+   "id": "historic-trinity",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -441,7 +441,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "unavailable-music",
+   "id": "classified-antenna",
    "metadata": {},
    "outputs": [
     {
@@ -462,7 +462,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "neural-oxide",
+   "id": "productive-blackjack",
    "metadata": {},
    "outputs": [
     {
@@ -495,7 +495,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "appropriate-concept",
+   "id": "french-sessions",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -505,7 +505,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "twelve-announcement",
+   "id": "healthy-charter",
    "metadata": {},
    "outputs": [
     {
@@ -571,7 +571,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "chemical-black",
+   "id": "former-consortium",
    "metadata": {},
    "source": [
     "# Exercice\n",
@@ -582,7 +582,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "casual-cement",
+   "id": "optimum-glenn",
    "metadata": {},
    "outputs": [
     {
@@ -601,23 +601,41 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "catholic-particle",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
-   "id": "welsh-dover",
+   "id": "warming-president",
    "metadata": {},
    "source": [
     "# Exercice\n",
     "\n",
-    "- Complétez la documentation et les tests pour `calcule_chemin`\n",
-    "- Trait"
+    "A partir d'un `GrapheP` réaliser une visualisation en générant un fichier [dot](https://en.wikipedia.org/wiki/DOT_(graph_description_language)) \n",
+    "\n",
+    "On générera un fichier `temp.dot` avec une méthode de `GrapheP` `genere_dot` puis on utilisera la syntaxe \n",
+    "```\n",
+    "dot -Tsvg -o temp.svg temp.dot\n",
+    "```\n",
+    "Le logiciel dot fait parti de la suite de logiciel [graphviz](https://graphviz.org/)\n",
+    "\n",
+    "10min -> 12h10"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "essential-thumbnail",
+   "metadata": {},
+   "source": [
+    "# Exercice\n",
+    "\n",
+    "- Complétez la documentation et les tests pour `calcule_chemin`.\n",
+    "- Traitez le cas où il n'y a pas de chemin reliant les deux sommets."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "clear-tattoo",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
