--- a/Seance09/seance.ipynb
+++ b/Seance09/seance.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "english-roller",
+   "id": "hungarian-basketball",
    "metadata": {},
    "source": [
     "# Exercice\n",
@@ -13,7 +13,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "illegal-insulation",
+   "id": "fatal-software",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "sudden-sugar",
+   "id": "saving-there",
    "metadata": {},
    "outputs": [
     {
@@ -127,7 +127,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "individual-brisbane",
+   "id": "skilled-oasis",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -152,7 +152,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "protective-pharmaceutical",
+   "id": "african-wagon",
    "metadata": {},
    "outputs": [
     {
@@ -173,7 +173,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "biological-pledge",
+   "id": "specific-transaction",
    "metadata": {},
    "outputs": [
     {
@@ -194,7 +194,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "retained-haiti",
+   "id": "framed-optimum",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -232,7 +232,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "separated-attention",
+   "id": "located-chance",
    "metadata": {},
    "outputs": [
     {
@@ -253,7 +253,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "insured-frederick",
+   "id": "unsigned-disco",
    "metadata": {},
    "outputs": [
     {
@@ -273,7 +273,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fabulous-positive",
+   "id": "cutting-condition",
    "metadata": {},
    "source": [
     "# Exercice\n",
@@ -290,7 +290,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "conscious-rebound",
+   "id": "effective-glass",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -300,7 +300,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "rental-visiting",
+   "id": "neutral-affair",
    "metadata": {},
    "outputs": [
     {
@@ -345,7 +345,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "wireless-looking",
+   "id": "silver-invasion",
    "metadata": {},
    "outputs": [
     {
@@ -367,7 +367,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "revised-maine",
+   "id": "collaborative-large",
    "metadata": {},
    "outputs": [
     {
@@ -394,7 +394,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "sharing-deficit",
+   "id": "spanish-theorem",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -404,7 +404,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "graduate-trauma",
+   "id": "subjective-professor",
    "metadata": {},
    "outputs": [
     {
@@ -431,7 +431,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "historic-trinity",
+   "id": "micro-frost",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -441,7 +441,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "classified-antenna",
+   "id": "comic-facial",
    "metadata": {},
    "outputs": [
     {
@@ -462,7 +462,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "productive-blackjack",
+   "id": "awful-generation",
    "metadata": {},
    "outputs": [
     {
@@ -495,7 +495,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "french-sessions",
+   "id": "united-affair",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -505,7 +505,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "healthy-charter",
+   "id": "basic-america",
    "metadata": {},
    "outputs": [
     {
@@ -571,7 +571,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "former-consortium",
+   "id": "better-pilot",
    "metadata": {},
    "source": [
     "# Exercice\n",
@@ -582,7 +582,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "optimum-glenn",
+   "id": "preceding-breathing",
    "metadata": {},
    "outputs": [
     {
@@ -602,7 +602,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "warming-president",
+   "id": "educated-liverpool",
    "metadata": {},
    "source": [
     "# Exercice\n",
@@ -613,29 +613,35 @@
     "```\n",
     "dot -Tsvg -o temp.svg temp.dot\n",
     "```\n",
-    "Le logiciel dot fait parti de la suite de logiciel [graphviz](https://graphviz.org/)\n",
+    "Le logiciel `dot` fait parti de la suite de logiciel [graphviz](https://graphviz.org/)\n",
     "\n",
     "10min -> 12h10"
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "assumed-narrow",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "exemple.genere_dot(nom_fichier=\"exemple\")"
+   ]
+  },
+  {
    "cell_type": "markdown",
-   "id": "essential-thumbnail",
+   "id": "electrical-confirmation",
    "metadata": {},
    "source": [
     "# Exercice\n",
     "\n",
     "- Complétez la documentation et les tests pour `calcule_chemin`.\n",
-    "- Traitez le cas où il n'y a pas de chemin reliant les deux sommets."
+    "- Traitez le cas où il n'y a pas de chemin reliant les deux sommets.\n",
+    "- Complétez la documentation et les tests de `genere_dot`.\n",
+    "- Utiliser python pour lancer le logiciel dot.\n",
+    "- Ajouter à `GrapheP` un constructeur `par_fichier_dot`.\n",
+    "- Ajouter une fonction `dessine_chemin` affichant un graphe avec un chemin d'une couleur différente."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "clear-tattoo",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
