--- a/Seance11/seance.ipynb
+++ b/Seance11/seance.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "latest-mandate",
+   "id": "under-terminal",
    "metadata": {},
    "source": [
     "# Exercice\n",
@@ -13,7 +13,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "smoking-robin",
+   "id": "stuffed-niger",
    "metadata": {
     "jupyter": {
      "source_hidden": true
@@ -197,7 +197,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "handed-devon",
+   "id": "catholic-nothing",
    "metadata": {},
    "outputs": [
     {
@@ -217,14 +217,14 @@
   },
   {
    "cell_type": "markdown",
-   "id": "opened-librarian",
+   "id": "foster-assessment",
    "metadata": {},
    "source": [
     "## Etape de préprocessing\n",
     "\n",
     "1. Enlever les sauts de lignes.\n",
-    "2. Transformer les majuscules en minuscules.\n",
-    "3. Suppression des caractères *spéciaux*.\n",
+    "2. Transformer les majuscules en minuscules. -> 10h45\n",
+    "3. Suppression des caractères *spéciaux*. -> 11h05\n",
     "4. Remplacer les suites de caractères *blancs* par **un** espace. \n",
     "5. Découper suivant les espaces.\n",
     "\n",
@@ -235,8 +235,13 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "minus-livestock",
-   "metadata": {},
+   "id": "prompt-distribution",
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -332,8 +337,30 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 4,
+   "id": "statutory-brick",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\u001b[0;31mSignature:\u001b[0m \u001b[0mstr\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlower\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m/\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+       "\u001b[0;31mDocstring:\u001b[0m Return a copy of the string converted to lowercase.\n",
+       "\u001b[0;31mType:\u001b[0m      method_descriptor\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "str.lower?"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "blessed-magazine",
+   "id": "understanding-modern",
    "metadata": {},
    "outputs": [],
    "source": []
